--- a/Application-of-Derivatives-P.2/main.tex
+++ b/Application-of-Derivatives-P.2/main.tex
@@ -70,9 +70,12 @@
 
 \chapter{Application of Derivatives Part Two}
 
+\vspace*{-15mm}
+
 \section{Optimization}\index{Optimization}
 
-For optimization problems...
+{\small For optimization problems, you must clearly identify what the question is asking for. The wording of the question is the biggest thing to look out for.
+    Read the problem carefully, then identify the quantity that is to be optimized and the constraints.}
 
 \vspace*{5mm}
 
@@ -207,7 +210,8 @@ side (which will be annoying to take the derivative of), we can simply take the 
     $x=\sqrt[3]{256}$
 \end{center}
 
-\noindent \textbf{DOMAIN CHECK TODO}We need to make sure that this critical point is actually the minimum value. Let's do the 1st derivative test - plug in two numbers
+\noindent First we need to make sure this x-value falls within the domain: $x$ \textbf{cannot} be negative and has to be at least smaller than $z$ (we confirm this up ahead).
+Next, we need to make sure that this critical point is actually the minimum value. Let's do the 1st derivative test - plug in two numbers
 into the derivative: one lower (4) and one higher (8) than $\sqrt[3]{256}$.
 
 \begin{multicols}{2}
@@ -316,7 +320,7 @@ into the derivative: one lower (4) and one higher (8) than $\sqrt[3]{256}$.
 
 \section{Related Rates}\index{Related Rates}
 
-For related rates...
+{\small We will be putting our differentiation skills to the test in this related rates section. These are real applications of derivatives - exactly what we are learning!}
 
 \vspace*{5mm}
 
@@ -329,13 +333,15 @@ when the radius is 60cm?
 
 \noindent As always, let's first draw/sketch it out so we can have an easier time understanding the problem and what it is asking for: what rate the plate's area
 is increasing \textbf{at the instant} (A.T.I) the radius is 60cm.
-
+\vspace*{-7mm}
 \begin{center}
     \includegraphics[scale=0.4]{Example3Pic.jpg}
 \end{center}
-
+\vspace*{-4mm}
 \noindent Notice in the question it says that the radius \textbf{increases at a rate of 0.02 cm/min}. This basically gives us the derivative; whenever you see
 'rate', it refers to the derivative. We are also given the radius.
+
+\vspace*{-4mm}
 
 \begin{center}
     \underline{given:}
@@ -345,6 +351,8 @@ is increasing \textbf{at the instant} (A.T.I) the radius is 60cm.
         $r=60cm$
     \end{multicols}
 \end{center}
+
+\pagebreak
 
 \noindent The question asks us \textbf{what rate is the plate's area increasing} when the radius is 60cm? Again, it is asking for the 'rate', so they are asking
 for the derivative:
